--- a/diensten/marketing.html
+++ b/diensten/marketing.html
@@ -60,15 +60,15 @@
       <div class="container">
         <div class="section-header">
           <p class="kicker">Onze Expertise</p>
-          <h2>Wat we voor u doen</h2>
+          <h2>Een geïntegreerde aanpak</h2>
         </div>
-        <div class="services-overview-grid">
-          <div class="card service-detail-card"><h3>Strategie & Positionering</h3><p>Doelgroep, propositie en kanalen scherp krijgen.</p></div>
-          <div class="card service-detail-card"><h3>Content & Creatie</h3><p>Copy, visuals en video die het merk dragen.</p></div>
-          <div class="card service-detail-card"><h3>Social & Advertising</h3><p>Meta, LinkedIn, Google Ads campagnes op conversie.</p></div>
-          <div class="card service-detail-card"><h3>SEO & SEA</h3><p>Techniek, content en autoriteit voor online vindbaarheid.</p></div>
-          <div class="card service-detail-card"><h3>E-mail & Automations</h3><p>Nurture-flows, segmentatie en lead-scoring.</p></div>
-          <div class="card service-detail-card"><h3>Analytics & KPI’s</h3><p>Dashboarding, A/B-testen en heldere rapportage.</p></div>
+        <div class="services-grid" style="grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));">
+          <div class="card service-detail-card"><h3>Strategie & Positionering</h3><p>We definiëren uw doelgroep, unieke waardepropositie en optimale kanalenmix voor maximale impact.</p></div>
+          <div class="card service-detail-card"><h3>Content & Creatie</h3><p>Copywriting, visuals en video die uw merkverhaal vertellen en uw doelgroep activeren.</p></div>
+          <div class="card service-detail-card"><h3>Social & Advertising</h3><p>Resultaatgerichte campagnes op Meta, LinkedIn en Google Ads, geoptimaliseerd voor conversie.</p></div>
+          <div class="card service-detail-card"><h3>SEO & SEA</h3><p>Maximale online zichtbaarheid door een combinatie van technische SEO, content en autoriteit.</p></div>
+          <div class="card service-detail-card"><h3>E-mail & Automations</h3><p>We bouwen geautomatiseerde flows die leads nurturen, klanten binden en verkoop stimuleren.</p></div>
+          <div class="card service-detail-card"><h3>Analytics & KPI’s</h3><p>Heldere dashboards (GA4/GTM), A/B-testen en rapportages die inzicht en richting geven.</p></div>
         </div>
       </div>
     </section>
@@ -80,33 +80,18 @@
           <h2>Van Plan tot Optimalisatie</h2>
         </div>
         <div class="process-grid">
-          <div class="card"><div class="process-number">01</div><h3>Plan</h3><p>Campagneroadmap per kwartaal met duidelijke doelstellingen en budget.</p></div>
-          <div class="card"><div class="process-number">02</div><h3>Productie</h3><p>Content, advertenties en landingspagina’s met correcte tracking.</p></div>
-          <div class="card"><div class="process-number">03</div><h3>Optimalisatie</h3><p>Wekelijkse iteraties en een maandrapport met heldere learnings.</p></div>
+          <div class="card"><div class="process-number">01</div><h3>Plan</h3><p>Een kwartaalroadmap met duidelijke campagnedoelen, budgetten en te verwachten resultaten.</p></div>
+          <div class="card"><div class="process-number">02</div><h3>Productie</h3><p>Creatie van alle content, advertenties en landingspagina’s, inclusief waterdichte tracking.</p></div>
+          <div class="card"><div class="process-number">03</div><h3>Optimalisatie</h3><p>Wekelijkse monitoring en bijsturing. Een maandrapport met heldere inzichten en aanbevelingen.</p></div>
         </div>
       </div>
     </section>
-
-    <section class="faq-section section">
-      <div class="container">
-        <div class="section-header">
-          <p class="kicker">FAQ</p>
-          <h2>Veelgestelde vragen</h2>
-        </div>
-        <div class="faq-grid">
-          <div class="card"><h3>Werken jullie met bestaande teams?</h3><p>Zeker. We versterken uw interne marketing en werken samen met vaste partners waar nodig.</p></div>
-          <div class="card"><h3>Kunnen jullie alles meten?</h3><p>We zetten correcte tracking op (GA4/GTM) en maken een dashboard met de KPI’s die ertoe doen.</p></div>
-          <div class="card"><h3>Doen jullie ook branding?</h3><p>Ja, van brand story tot visuele guidelines. We koppelen branding altijd aan performance-doelen.</p></div>
-          <div class="card"><h3>Is AI betrokken?</h3><p>We gebruiken AI waar het waarde toevoegt (analyses, contentvarianten), altijd met menselijke kwaliteitscontrole.</p></div>
-        </div>
-      </div>
-    </section>
-
+    
     <section class="cta-section section">
       <div class="container">
         <div class="cta-card">
-          <h2>Klaar om uw marketing op te schalen?</h2>
-          <p>Plan een vrijblijvend gesprek en ontdek hoe we uw groei kunnen versnellen.</p>
+          <h2>Klaar om uw marketing te schalen?</h2>
+          <p>Plan een vrijblijvend gesprek en ontdek hoe we uw groei kunnen versnellen met een doelgerichte aanpak.</p>
           <a class="btn" href="/contact.html">Plan kennismaking</a>
         </div>
       </div>
