--- a/diensten/consultancy.html
+++ b/diensten/consultancy.html
@@ -62,13 +62,13 @@
           <p class="kicker">Onze Expertise</p>
           <h2>Hoe we uw bedrijf versterken</h2>
         </div>
-        <div class="services-overview-grid">
-          <div class="card service-detail-card"><h3>Strategische Roadmap</h3><p>Heldere doelen, KPI's en prioriteiten voor de komende kwartalen.</p></div>
-          <div class="card service-detail-card"><h3>Procesoptimalisatie</h3><p>Workflows stroomlijnen om tijd en middelen te besparen.</p></div>
-          <div class="card service-detail-card"><h3>Kostenanalyse</h3><p>Diepgaande analyse om overbodige uitgaven te schrappen.</p></div>
-          <div class="card service-detail-card"><h3>Data &amp; Rapportering</h3><p>Inzichten vertalen naar duidelijke dashboards en actiepunten.</p></div>
-          <div class="card service-detail-card"><h3>Tooling &amp; Automatisering</h3><p>De juiste tools implementeren om efficiëntie te verhogen.</p></div>
-          <div class="card service-detail-card"><h3>Change Management</h3><p>Begeleiding bij de implementatie van nieuwe strategieën.</p></div>
+        <div class="services-grid" style="grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));">
+          <div class="card service-detail-card"><h3>Strategische Roadmap</h3><p>We vertalen uw visie naar een helder kwartaalplan met concrete doelen, KPI's en prioriteiten.</p></div>
+          <div class="card service-detail-card"><h3>Procesoptimalisatie</h3><p>We stroomlijnen uw workflows van A tot Z om tijdverlies en operationele frictie te elimineren.</p></div>
+          <div class="card service-detail-card"><h3>Kostenanalyse</h3><p>Een diepgaande analyse van uw uitgavenstructuur om onnodige kosten te schrappen en marges te verhogen.</p></div>
+          <div class="card service-detail-card"><h3>Data & Rapportering</h3><p>We transformeren complexe data naar intuïtieve dashboards die sturen op de juiste inzichten.</p></div>
+          <div class="card service-detail-card"><h3>Tooling & Automatisering</h3><p>We selecteren en implementeren de juiste software om manueel werk te reduceren en efficiëntie te boosten.</p></div>
+          <div class="card service-detail-card"><h3>Change Management</h3><p>We begeleiden uw team bij de implementatie van nieuwe strategieën en processen voor een vlotte transitie.</p></div>
         </div>
       </div>
     </section>
@@ -80,33 +80,18 @@
           <h2>Van Analyse tot Resultaat</h2>
         </div>
         <div class="process-grid">
-          <div class="card"><div class="process-number">01</div><h3>Analyse</h3><p>Diepgaande scan van uw huidige processen, data en financiële cijfers.</p></div>
-          <div class="card"><div class="process-number">02</div><h3>Advies</h3><p>Een concreet en onderbouwd plan met quick wins en langetermijndoelen.</p></div>
-          <div class="card"><div class="process-number">03</div><h3>Implementatie</h3><p>Begeleiding bij de uitvoering, met continue monitoring en bijsturing.</p></div>
+          <div class="card"><div class="process-number">01</div><h3>Analyse</h3><p>Diepgaande scan van uw huidige processen, data en financiële cijfers om pijnpunten en opportuniteiten te identificeren.</p></div>
+          <div class="card"><div class="process-number">02</div><h3>Advies</h3><p>Een concreet en onderbouwd actieplan met quick wins, langetermijndoelen en verwachte ROI.</p></div>
+          <div class="card"><div class="process-number">03</div><h3>Implementatie</h3><p>Hands-on begeleiding bij de uitvoering, met continue monitoring en bijsturing om de doelen te garanderen.</p></div>
         </div>
       </div>
-    </section>
-
-    <section class="faq-section section">
-        <div class="container">
-            <div class="section-header">
-                <p class="kicker">FAQ</p>
-                <h2>Veelgestelde vragen</h2>
-            </div>
-            <div class="faq-grid">
-                <div class="card"><h3>Is dit enkel voor grote bedrijven?</h3><p>Nee, onze aanpak is specifiek ontworpen voor de realiteit van KMO's: praktisch en direct toepasbaar.</p></div>
-                <div class="card"><h3>Hoe meten jullie succes?</h3><p>We stellen vooraf duidelijke KPI’s op, zoals margeverbetering, kostenreductie of productiviteitswinst.</p></div>
-                <div class="card"><h3>Wat is de doorlooptijd?</h3><p>Een eerste analyse en roadmap duurt doorgaans 2 tot 4 weken, afhankelijk van de complexiteit.</p></div>
-                <div class="card"><h3>Blijven jullie betrokken?</h3><p>We bieden ondersteuning van analyse tot en met de implementatie om de vooropgestelde doelen te garanderen.</p></div>
-            </div>
-        </div>
     </section>
 
     <section class="cta-section section">
       <div class="container">
         <div class="cta-card">
           <h2>Klaar om efficiënter te werken?</h2>
-          <p>Plan een vrijblijvend gesprek en ontdek de verborgen potentie in uw bedrijfsprocessen.</p>
+          <p>Plan een vrijblijvend gesprek en ontdek de verborgen potentie in uw bedrijfsprocessen en financiële structuur.</p>
           <a class="btn" href="/contact.html">Plan kennismaking</a>
         </div>
       </div>
