--- a/insights/index.html
+++ b/insights/index.html
@@ -5,49 +5,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <title>Insights | Buscemi Group</title>
-  <meta name="description" content="Praktische tips en artikels van Buscemi Group — kort, krachtig en direct toepasbaar voor uw KMO." />
+  <meta name="description" content="Praktische tips en strategische artikels van Buscemi Group — kort, krachtig en direct toepasbaar voor uw KMO." />
   <link rel="canonical" href="https://buscemigroup.be/insights/" />
-  <meta name="theme-color" content="#0d1425" />
+  <meta name="theme-color" content="#0a3d2c" />
 
-  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet" />
-
-  <!-- Styles -->
+  
   <link rel="stylesheet" href="/style.css" />
-
-  <!-- Icons & PWA -->
+  
   <link rel="icon" href="/assets/favicon.png" type="image/png" />
   <link rel="manifest" href="/site.webmanifest" />
-
-  <!-- Open Graph / Twitter -->
+  
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://buscemigroup.be/insights/" />
   <meta property="og:site_name" content="Buscemi Group" />
   <meta property="og:title" content="Insights | Buscemi Group" />
-  <meta property="og:description" content="Praktische tips en artikels — kort en toepasbaar." />
+  <meta property="og:description" content="Praktische tips en strategische artikels — kort en toepasbaar." />
   <meta property="og:image" content="https://buscemigroup.be/assets/og-image.png" />
-  
-  <style>
-    .skip-link{position:absolute;left:-999px;top:auto;width:1px;height:1px;overflow:hidden}
-    .skip-link:focus{left:1rem;top:1rem;width:auto;height:auto;padding:.5rem 1rem;z-index:1000;background:#fff;outline:2px solid currentColor}
-    .subpage-hero { background: var(--bg-soft); text-align: center; padding-top: clamp(3rem, 8vw, 5rem); padding-bottom: clamp(3rem, 8vw, 5rem); }
-    .insights-section { padding-top: clamp(3rem, 8vw, 6rem); }
-  </style>
 </head>
 <body>
-  <a class="skip-link" href="#main">Ga naar hoofdinhoud</a>
-
   <header class="site-header">
     <div class="container nav-container">
       <a class="brand" href="/">
         <img src="/assets/logo.png" alt="Buscemi Group" width="160" height="40" decoding="async" />
       </a>
-      <button class="burger" data-nav-toggle aria-label="Hoofdmenu" aria-expanded="false" aria-controls="site-menu">
-        <span class="burger-line"></span><span class="burger-line"></span><span class="burger-line"></span>
-      </button>
-      <nav id="site-menu" class="nav-links" data-nav-menu aria-label="Hoofdnavigatie" aria-hidden="true">
+      <nav id="site-menu" class="nav-links" data-nav-menu aria-label="Hoofdnavigatie">
         <ul class="menu">
           <li><a href="/over.html" data-nav-link>Over</a></li>
           <li>
@@ -64,6 +48,7 @@
         </ul>
       </nav>
       <a class="btn primary-cta" href="/contact.html">Plan kennismaking</a>
+      <button class="burger" data-nav-toggle aria-label="Hoofdmenu" aria-expanded="false" aria-controls="site-menu"></button>
     </div>
   </header>
 
@@ -71,42 +56,39 @@
     <section class="subpage-hero">
       <div class="container">
         <p class="kicker">Insights</p>
-        <h1>Praktische tips & artikels</h1>
-        <p class="sub mx-auto">Kort, krachtig en direct toepasbaar voor uw KMO.</p>
+        <h1>Strategische inzichten voor de KMO</h1>
+        <p class="sub">Beknopte, praktische artikels en tips, direct toepasbaar op uw bedrijfsvoering.</p>
       </div>
     </section>
 
-    <section class="insights-section fade-in-section">
+    <section class="insights-section section">
         <div class="container">
             <div class="insights-grid">
-                <a class="card insight-card" href="/insights/social-strategie-30-min.html">
-                    <span class="badge">Marketing</span>
-                    <h3>Social strategie in 30 minuten per week</h3>
-                    <p>Snel impact zonder fulltime social team: zo hou je structuur in 30 minuten per week.</p>
-                    <span class="card-link">Lees artikel</span>
+                <a class="card" href="/insights/social-strategie-30-min.html">
+                    <h3>Social media strategie in 30 minuten per week</h3>
+                    <p>Hoe u met een minimalistische aanpak maximale en consistente impact creëert op sociale media.</p>
+                    <span class="card-link">Lees artikel <span class="arrow">→</span></span>
                 </a>
-                <a class="card insight-card" href="/insights/kosten-besparen-met-data.html">
-                    <span class="badge">Consultancy</span>
-                    <h3>Kosten besparen met data-analyse</h3>
-                    <p>Zo leg je verborgen kosten bloot en verhoog je marge met eenvoudige, gerichte analyses.</p>
-                    <span class="card-link">Lees artikel</span>
+                <a class="card" href="/insights/kosten-besparen-met-data.html">
+                    <h3>Kosten besparen met gerichte data-analyse</h3>
+                    <p>Ontdek hoe u verborgen kosten blootlegt en uw marge verhoogt met eenvoudige, doelgerichte analyses.</p>
+                    <span class="card-link">Lees artikel <span class="arrow">→</span></span>
                 </a>
-                <a class="card insight-card" href="#">
-                    <span class="badge">Groei</span>
-                    <h3>Consistent groeien: de kracht van kleine stappen</h3>
-                    <p>Waarom kleine, consequente stappen op lange termijn vaak meer opleveren dan grote sprongen ineens.</p>
-                    <span class="card-link">Lees artikel</span>
+                <a class="card" href="#">
+                    <h3>De kracht van incrementele groei</h3>
+                    <p>Waarom kleine, consequente stappen op lange termijn vaak meer opleveren dan grote, risicovolle sprongen.</p>
+                    <span class="card-link">Lees artikel <span class="arrow">→</span></span>
                 </a>
             </div>
         </div>
     </section>
 
-    <section class="cta-section fade-in-section">
+    <section class="cta-section section">
       <div class="container">
         <div class="cta-card">
           <h2>Hulp nodig met uw strategie?</h2>
-          <p>Plan een vrijblijvend gesprek en laten we samen de mogelijkheden voor uw bedrijf bekijken.</p>
-          <a class="btn" href="/contact.html">Plan kennismaking</a>
+          <p>Onze inzichten zijn een startpunt. Laten we bespreken hoe we deze principes kunnen toepassen op uw unieke situatie.</p>
+          <a class="btn" href="/contact.html">Plan een gesprek</a>
         </div>
       </div>
     </section>
@@ -137,18 +119,7 @@
     document.addEventListener('DOMContentLoaded', function () {
       const yearEl = document.getElementById('year');
       if (yearEl) yearEl.textContent = new Date().getFullYear();
-      const sections = document.querySelectorAll('.fade-in-section');
-      const observer = new IntersectionObserver((entries) => {
-        entries.forEach(entry => {
-          if (entry.isIntersecting) {
-            entry.target.classList.add('is-visible');
-            observer.unobserve(entry.target);
-          }
-        });
-      }, { threshold: 0.1 });
-      sections.forEach(section => { observer.observe(section); });
     });
   </script>
-  <noscript><style>.fade-in-section { opacity: 1; transform: none; } [data-nav-menu]{display:block!important}</style></noscript>
 </body>
 </html>
