--- a/contact.html
+++ b/contact.html
@@ -51,8 +51,8 @@
     <section class="subpage-hero">
       <div class="container">
         <p class="kicker">Contact</p>
-        <h1>Laten we praten</h1>
-        <p class="sub">Stel uw vraag of plan een kennismaking. We antwoorden <strong>binnen één werkdag</strong>.</p>
+        <h1>Laten we uw project bespreken</h1>
+        <p class="sub">Stel uw vraag of plan een vrijblijvende kennismaking. We antwoorden gegarandeerd <strong>binnen één werkdag</strong>.</p>
       </div>
     </section>
 
@@ -79,7 +79,7 @@
               <input type="text" id="bedrijf" name="bedrijf" />
             </div>
             <div class="form-group">
-              <label for="vraag">Waarmee kunnen we helpen?*</label>
+              <label for="vraag">Waarmee kunnen we u helpen?*</label>
               <textarea id="vraag" name="vraag" rows="6" required></textarea>
             </div>
             <div class="form-group">
@@ -95,12 +95,12 @@
         </div>
         
         <aside class="contact-info-card">
-          <h3>Andere contactopties</h3>
+          <h3>Contactgegevens</h3>
           <p><strong>E-mail:</strong><br><a href="mailto:info@buscemigroup.be">info@buscemigroup.be</a></p>
           <p><strong>Telefoon:</strong><br><a href="tel:+32470713251">+32 470 71 32 51</a></p>
-          <h3 style="margin-top: 2.5rem;">Liever meteen plannen?</h3>
-          <p>Kies een moment dat u past. We bellen of meeten kort om uw vraag te kaderen.</p>
-          <a class="btn alt" href="https://calendly.com/" target="_blank" rel="noopener">Plan een gesprek</a>
+          <h3 style="margin-top: 2.5rem;">Direct een afspraak?</h3>
+          <p>Kies zelf een moment in onze agenda voor een kort, vrijblijvend kennismakingsgesprek.</p>
+          <a class="btn alt" href="https://calendly.com/" target="_blank" rel="noopener" style="width: 100%;">Plan een gesprek</a>
         </aside>
       </div>
     </section>
