--- a/diensten/marketing.html
+++ b/diensten/marketing.html
@@ -51,7 +51,7 @@
     <section class="subpage-hero">
       <div class="container">
         <p class="kicker">Marketing</p>
-        <h1>Marketing die <span class="accent">consequent resultaat</span> oplevert</h1>
+        <h1>Marketing die consequent resultaat oplevert</h1>
         <p class="sub">Strategie, creatie en performance onder één dak. We bouwen een consistente merkbeleving en campagnes die converteren — met KPI’s die tellen.</p>
       </div>
     </section>
