--- a/diensten/consultancy.html
+++ b/diensten/consultancy.html
@@ -51,7 +51,7 @@
     <section class="subpage-hero">
       <div class="container">
         <p class="kicker">Consultancy</p>
-        <h1>Strategisch advies dat <span class="accent">marge en efficiëntie</span> verhoogt</h1>
+        <h1>Strategisch advies dat marge en efficiëntie verhoogt</h1>
         <p class="sub">We analyseren uw bedrijfsprocessen en data om verborgen kosten bloot te leggen en duurzame groei te realiseren. Een concreet plan, direct uitvoerbaar.</p>
       </div>
     </section>
