--- a/diensten/index.html
+++ b/diensten/index.html
@@ -49,9 +49,8 @@
 
   <main id="main">
     <section class="subpage-hero">
-      <div class="container">
-        <p class="kicker">Onze Diensten</p>
-        <h1>Marketing & Consultancy voor <span class="accent">ambitieuze KMO’s</span></h1>
+      <div class="container section-header">
+        <h1>Marketing & Consultancy voor ambitieuze KMO’s</h1>
         <p class="sub">Heldere strategie, praktische uitvoering en meetbare KPI’s. We stemmen scope en tempo af op uw unieke doelen.</p>
       </div>
     </section>
@@ -78,7 +77,6 @@
     <section class="process-section section surface">
       <div class="container">
         <div class="section-header">
-          <p class="kicker">Onze Werkwijze</p>
           <h2>Een heldere aanpak in 3 stappen</h2>
         </div>
         <div class="process-grid">
@@ -104,7 +102,6 @@
     <section class="faq-section section">
       <div class="container">
         <div class="section-header">
-          <p class="kicker">FAQ</p>
           <h2>Veelgestelde vragen</h2>
         </div>
         <div class="faq-grid">
