--- a/diensten/marketing.html
+++ b/diensten/marketing.html
@@ -49,8 +49,7 @@
 
   <main id="main">
     <section class="subpage-hero">
-      <div class="container">
-        <p class="kicker">Marketing</p>
+      <div class="container section-header">
         <h1>Marketing die consequent resultaat oplevert</h1>
         <p class="sub">Strategie, creatie en performance onder één dak. We bouwen een consistente merkbeleving en campagnes die converteren — met KPI’s die tellen.</p>
       </div>
@@ -59,7 +58,6 @@
     <section class="services-overview-section section">
       <div class="container">
         <div class="section-header">
-          <p class="kicker">Onze Expertise</p>
           <h2>Een geïntegreerde aanpak</h2>
         </div>
         <div class="services-grid" style="grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));">
@@ -76,7 +74,6 @@
     <section class="process-section section surface">
       <div class="container">
         <div class="section-header">
-          <p class="kicker">Onze Aanpak</p>
           <h2>Van Plan tot Optimalisatie</h2>
         </div>
         <div class="process-grid">
