--- a/diensten/consultancy.html
+++ b/diensten/consultancy.html
@@ -49,8 +49,7 @@
 
   <main id="main">
     <section class="subpage-hero">
-      <div class="container">
-        <p class="kicker">Consultancy</p>
+      <div class="container section-header">
         <h1>Strategisch advies dat marge en efficiëntie verhoogt</h1>
         <p class="sub">We analyseren uw bedrijfsprocessen en data om verborgen kosten bloot te leggen en duurzame groei te realiseren. Een concreet plan, direct uitvoerbaar.</p>
       </div>
@@ -59,7 +58,6 @@
     <section class="services-overview-section section">
       <div class="container">
         <div class="section-header">
-          <p class="kicker">Onze Expertise</p>
           <h2>Hoe we uw bedrijf versterken</h2>
         </div>
         <div class="services-grid" style="grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));">
@@ -76,7 +74,6 @@
     <section class="process-section section surface">
       <div class="container">
         <div class="section-header">
-          <p class="kicker">Onze Aanpak</p>
           <h2>Van Analyse tot Resultaat</h2>
         </div>
         <div class="process-grid">
