--- a/insights/index.html
+++ b/insights/index.html
@@ -3,21 +3,16 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-
   <title>Insights | Buscemi Group</title>
   <meta name="description" content="Praktische tips en strategische artikels van Buscemi Group — kort, krachtig en direct toepasbaar voor uw KMO." />
   <link rel="canonical" href="https://buscemigroup.be/insights/" />
   <meta name="theme-color" content="#0a3d2c" />
-
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet" />
-  
   <link rel="stylesheet" href="/style.css" />
-  
   <link rel="icon" href="/assets/favicon.png" type="image/png" />
   <link rel="manifest" href="/site.webmanifest" />
-  
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://buscemigroup.be/insights/" />
   <meta property="og:site_name" content="Buscemi Group" />
@@ -54,8 +49,7 @@
 
   <main id="main">
     <section class="subpage-hero">
-      <div class="container">
-        <p class="kicker">Insights</p>
+      <div class="container section-header">
         <h1>Strategische inzichten voor de KMO</h1>
         <p class="sub">Beknopte, praktische artikels en tips, direct toepasbaar op uw bedrijfsvoering.</p>
       </div>
