--- a/contact.html
+++ b/contact.html
@@ -49,8 +49,7 @@
 
   <main id="main">
     <section class="subpage-hero">
-      <div class="container">
-        <p class="kicker">Contact</p>
+      <div class="container section-header">
         <h1>Laten we uw project bespreken</h1>
         <p class="sub">Stel uw vraag of plan een vrijblijvende kennismaking. We antwoorden gegarandeerd <strong>binnen één werkdag</strong>.</p>
       </div>
@@ -60,7 +59,7 @@
       <div class="container contact-grid">
         <div class="form-container">
           <h2>Stuur ons een bericht</h2>
-          <form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/bedankt.html">
+          <form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/bedankt.html" class="contact-form">
             <input type="hidden" name="form-name" value="contact" />
             <p style="display:none;"><label>Don’t fill this out if you’re human: <input name="bot-field" /></label></p>
             
