--- a/insights/kosten-besparen-met-data.html
+++ b/insights/kosten-besparen-met-data.html
@@ -85,19 +85,28 @@
     </section>
     
     <article class="container" style="padding-top: 32px; padding-bottom: 32px; max-width: 800px; margin-left: auto; margin-right: auto;">
-      <p class="muted">Leestijd: 4 min • Categorie: Consultancy</p>
-      <h3>1) Categoriseer uitgaven</h3>
-      <p>Groepeer kosten (media, tools, logistiek) en identificeer de grootste posten.</p>
-      <h3>2) Quick wins eerst</h3>
-      <p>Onderhandel licenties, schrap onbenutte tools en optimaliseer media-waste.</p>
-      <h3>3) Dashboards</h3>
-      <p>Monitor maand-op-maand KPI’s (CAC, marge, voorraadrotatie) en maak eigenaarschap duidelijk.</p>
-      <h3>4) Test & learn</h3>
-      <p>Voer gecontroleerde experimenten uit en schaal alleen wat rendeert.</p>
-      <div class="cta" style="margin-top:36px">
-        <p><strong>Ook besparen met betere inzichten?</strong> We helpen je graag op weg.</p>
-        <a class="btn" href="/contact.html">Plan gesprek</a>
-      </div>
+  <p class="muted">Leestijd: 4 min • Categorie: Consultancy</p>
+
+<p>Als ondernemer voelt het soms alsof je constant ballen in de lucht houdt. Groei, teammanagement, sales… en dan is er nog die onvermijdelijke druk op de marges. Veel KMO’s laten onbewust geld op tafel liggen, simpelweg omdat ze de tijd niet vinden om diep in hun eigen cijfers te duiken. Maar wat als je met een paar gerichte analyses verborgen kosten kunt blootleggen en je winstgevendheid structureel kunt verhogen?</p>
+<p>Het idee van "datagedreven werken" klinkt vaak complex en tijdrovend, maar dat hoeft het niet te zijn. De essentie is eenvoudig: stoppen met gokken, beginnen met weten. Hier is een praktisch stappenplan.</p>
+
+<h3>Stap 1: Maak categorieën van je uitgaven (en wees eerlijk)</h3>
+<p>De eerste stap is de minst glamoureuze, maar misschien wel de belangrijkste. Exporteer je uitgaven van de afgelopen zes maanden en groepeer alles in duidelijke categorieën: marketing (advertenties, tools), operationele kosten (softwarelicenties, logistiek), personeel, huisvesting, etc. Het doel is niet alleen om te zien wáár je geld naartoe gaat, maar vooral om de verhoudingen te begrijpen. Welke 20% van je kosten is verantwoordelijk voor 80% van het totaal? Dat is waar de grootste kansen liggen.</p>
+
+<h3>Stap 2: Ga voor de 'quick wins'</h3>
+<p>Je hoeft niet meteen je hele bedrijf om te gooien. Begin met het laaghangend fruit. Duik in je softwarelicenties: welke tools worden amper gebruikt maar kosten maandelijks geld? Een snelle scan levert vaak al honderden euro's per jaar op. Kijk vervolgens naar je advertentie-uitgaven. Welke campagnes leveren amper iets op? Pauzeer ze. Door eerst deze snelle winsten te pakken, creëer je niet alleen direct meer ademruimte, maar ook het momentum om verder te gaan.</p>
+
+<h3>Stap 3: Bouw een eenvoudig dashboard</h3>
+<p>Je hebt geen complexe Business Intelligence tool nodig. Een simpel Excel-bestand of een Google Data Studio-dashboard volstaat. Het doel is om enkele cruciale KPI’s maand-op-maand op te volgen:</p>
+<ul>
+<li><strong>Customer Acquisition Cost (CAC):</strong> Wat kost het je écht om een nieuwe klant binnen te halen?</li>
+<li><strong>Marge per product/dienst:</strong> Weet je welke van je aanbiedingen het meest winstgevend zijn?</li>
+<li><strong>Voorraadrotatie:</strong> Hoe snel beweegt je stock? Stilstaande voorraad is verloren geld.</li>
+</ul>
+<p>Door deze cijfers visueel te maken, zie je trends veel sneller en kun je ingrijpen voor kleine problemen groot worden.</p>
+
+<h3>Stap 4: Test, leer en schaal</h3>
+<p>Echte en duurzame verbetering komt van een cultuur van experimenteren. Wil je een nieuw marketingkanaal testen? Begin met een klein, afgebakend budget. Denk je een proces te kunnen optimaliseren? Probeer het eerst op één onderdeel van je team. Documenteer de resultaten, leer van wat niet werkt, en schaal enkel de initiatieven die bewezen renderen. Zo bouw je aan een sterker en financieel gezonder bedrijf, stap voor stap.</p>
     </article>
   </main>
 
