--- a/insights/social-strategie-30-min.html
+++ b/insights/social-strategie-30-min.html
@@ -85,26 +85,27 @@
     </section>
     
     <article class="container" style="padding-top: 32px; padding-bottom: 32px; max-width: 800px; margin-left: auto; margin-right: auto;">
-      <p class="muted">Leestijd: 3 min • Categorie: Marketing</p>
-      <h3>Waarom dit werkt</h3>
-      <p><em>Consistentie</em> &gt; intensiteit. Met een licht schema blijf je publiceren zonder uitstelgedrag.</p>
-      <h3>Het schema</h3>
-      <ul>
-        <li>Maandag: 10' ideation (3 bullets, 1 haakje)</li>
-        <li>Woensdag: 10' creatie (1 short, 1 beeld)</li>
-        <li>Vrijdag: 10' publicatie & snelle reacties</li>
-      </ul>
-      <h3>KPI's</h3>
-      <ul>
-        <li>Bereik per post</li>
-        <li>Save-rate / comment-rate</li>
-        <li>Doorkliks naar website</li>
-      </ul>
-      <p><strong>Pro tip:</strong> noteer learnings en hergebruik wat werkt.</p>
-      <div class="cta" style="margin-top:36px">
-        <p><strong>Hulp nodig met je socialplanning?</strong> We denken graag mee.</p>
-        <a class="btn" href="/contact.html">Plan gesprek</a>
-      </div>
+<p class="muted">Leestijd: 3 min • Categorie: Marketing</p>
+
+<p>Social media. Voor veel zaakvoerders een bron van lichte hoofdpijn. Je weet dat je "zichtbaar moet zijn", maar de gedachte aan dagelijkse posts, stories en reels is overweldigend. Het resultaat? Je doet een maand lang heel hard je best, om het daarna weer twee maanden te laten verwateren.</p>
+<p>De harde waarheid is: je hoeft geen fulltime social media manager te zijn om impact te maken. Een minimalistische aanpak die focust op consistentie levert op lange termijn veel meer op. Met dit schema besteed je slechts 30 minuten per week, maar bouw je wél aan een trouw publiek.</p>
+
+<h3>Het geheim: batch je werk en wees realistisch</h3>
+<p>De sleutel tot efficiëntie is ‘batchen’: verschillende taken groeperen. In plaats van elke dag te bedenken wat je nu weer moet posten, bundel je de creativiteit, de uitwerking en de publicatie op vaste momenten in de week.</p>
+<ul>
+<li><strong>Maandag (10 minuten): Ideation.</strong> Pak een notitieboekje. Schrijf op welke vragen je deze week van klanten kreeg. Welk project heb je afgerond? Welke tip kan je delen? Het doel is niet om perfecte posts te schrijven, maar om 3 ruwe ideeën (in bullet points) te noteren.</li>
+<li><strong>Woensdag (10 minuten): Creatie.</strong> Werk één van je ideeën uit. Schrijf een korte tekst. Maak er een simpele foto bij met je smartphone of ontwerp een snelle visual in een tool als Canva. Geen perfectie, wel authenticiteit.</li>
+<li><strong>Vrijdag (10 minuten): Publicatie & interactie.</strong> Plaats je post. Gebruik een planningstool als je dat handig vindt. Neem vervolgens 5 minuten de tijd om te reageren op commentaren en door de feed van je ideale klanten te scrollen. Een relevante opmerking achterlaten is vaak waardevoller dan zelf iets posten.</li>
+</ul>
+
+<h3>Wat meet je? De cijfers die er écht toe doen</h3>
+<p>Verlies jezelf niet in ‘vanity metrics’ zoals het aantal likes. Focus op wat telt:</p>
+<ul>
+<li><strong>Reacties & shares:</strong> Dit toont aan dat je content resoneert.</li>
+<li><strong>Vragen in je inbox:</strong> Komen er concrete vragen binnen naar aanleiding van je posts? Dat is een lead.</li>
+<li><strong>Websitekliks:</strong> Verwijs je af en toe naar je site? Komen er ook effectief bezoekers van?</li>
+</ul>
+<p>Door klein en consistent te werken, bouw je een gewoonte op. Je blijft top-of-mind bij je doelgroep zonder dat het je agenda overneemt. En het mooiste is: als je de smaak te pakken krijgt, kan je het ritme altijd nog opdrijven.</p>
     </article>
   </main>
 
