--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <main id="main">
     <section class="hero">
       <div class="container hero-container">
-        <h1>Strategische groei voor KMO's</h1>
+        <h1>Strategische <span class="accent">groei</span> voor KMO's</h1>
         <p class="sub">Wij vertalen uw ambitie naar meetbaar resultaat met doelgerichte marketing en praktisch advies. Geen wollige rapporten, wel concrete impact.</p>
         <div class="hero-actions">
           <a class="btn" href="/contact.html">Start met een gesprek</a>
