--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <p class="sub">Wij vertalen uw ambitie naar meetbaar resultaat met doelgerichte marketing en praktisch advies. Geen wollige rapporten, wel concrete impact.</p>
         <div class="hero-actions">
           <a class="btn" href="/contact.html">Start met een gesprek</a>
-          <a class="btn alt" href="/diensten/">Ontdek onze diensten</a>
+          <a class="btn alt" href="/diensten/index.html">Ontdek onze diensten</a>
         </div>
       </div>
     </section>
