--- a/legal.html
+++ b/legal.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="nl-BE">
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-D3JNSNPKPG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-D3JNSNPKPG');
+</script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Juridische Informatie | Buscemi Group</title>
