--- a/diensten/marketing.html
+++ b/diensten/marketing.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="nl-BE">
 <head>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-D3JNSNPKPG"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-D3JNSNPKPG"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-D3JNSNPKPG');
+  gtag('config', 'G-D3JNSNPKPG', { 'send_page_view': false }); // OPGELOST: Voorkomt automatische tracking
 </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
